--- a/src/pages/Cardapio/Cardapio.module.scss
+++ b/src/pages/Cardapio/Cardapio.module.scss
@@ -14,9 +14,9 @@
   }
 }
 
-.header {
+.mc {
   align-items: center;
-  background-image: url("/assets/cardapio/mac.jpg");
+  background-image: url("/src/assets/cardapio/mc.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
