--- a/src/pages/Cardapio/Cardapio.module.scss
+++ b/src/pages/Cardapio/Cardapio.module.scss
@@ -16,7 +16,7 @@
 
 .mc {
   align-items: center;
-  background-image: url("/src/assets/cardapio/mc.jpg");
+  background-image: url("../../assets/cardapio/mc.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
